<resources>
    <string name="app_name">SampleRecorder</string>

    <!-- Exit -->
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_message">정말로 종료하시겠습니까?</string>

    <!-- Audio Setting -->
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>

    <!-- Audio Record Source -->
    <string name="source">Source</string>
    <string name="defaults">Default</string>
    <string name="mic">Mic</string>
    <string name="voice_communication">Voice Communication</string>
    <string name="voice_performance">Voice Performance</string>
    <string name="voice_recognition">Voice Recognition</string>
    <string name="unprocessed">Unprocessed</string>

    <!-- Audio Channel -->
    <string name="channel">Channel</string>
    <string name="mono">Mono</string>
    <string name="stereo">Stereo</string>

    <!-- Audio Sample Rate -->
    <string name="rate">Sample Rate</string>
    <string name="rate_8000">8,000</string>
    <string name="rate_11025">11,025</string>
    <string name="rate_16000">16,000</string>
    <string name="rate_22050">22,050</string>
    <string name="rate_44100">44,100</string>

    <!-- Audio Buffer Size -->
    <string name="buffer_size">Buffer Size</string>
    <string name="buffer_size_512">512</string>
    <string name="buffer_size_1024">1024</string>
    <string name="buffer_size_2048">2048</string>

    <!-- Audio Play Type -->
    <string name="type">Play Type</string>
    <string name="ring">Ring</string>
    <string name="media">Media</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="system">System</string>

    <!-- Audio Play Volume -->
    <string name="volume">Volume</string>

    <!-- Audio List -->
    <string name="delete">Delete</string>
    <string name="delete_message">정말로 삭제하시겠습니까?</string>

    <!-- Toast Message -->
    <string name="toast_delete">파일이 삭제되었습니다.</string>
    <string name="toast_save_success">저장 완료</string>
    <string name="toast_save_failure">저장 실패</string>

    <!-- activity_main.xml -->
    <string name="main_record_guide">Record Settings</string>
    <string name="main_switch_button_guide">Drop</string>
    <string name="main_play_guide">Record Settings</string>

    <!-- activity_list.xml -->
    <string name="list_guide">Play List</string>

    <!-- item.xml -->
    <string name="item_guide_title">File name</string>
    <string name="item_guide_time">File time</string>
    <string name="item_guide_channel">File channel</string>
    <string name="item_guide_rate">File rate</string>

    <!-- activity_file_name.xml -->
    <string name="file_name_text_guide">파일 이름 :</string>
    <string name="file_name_btn_save">저장</string>
    <string name="file_name_btn_back">취소</string>

    <!-- View model string -->
    <string name="view_model_source">Source\n%s</string>
    <string name="view_model_record_channel">Channel\n%s</string>
    <string name="view_model_record_rate">Sample Rate\n%s</string>
    <string name="view_model_buffer_size">Buffer Size\n%s</string>
    <string name="view_model_type">Play Type\n%s</string>
    <string name="view_model_play_channel">Channel\n%s</string>
    <string name="view_model_play_rate">Sample Rate\n%s</string>
    <string name="view_model_volume">Volume\n%s</string>

    <!-- menu_toolbar.xml -->
    <string name="menu_toolbar_list">mode</string>
    <string name="menu_toolbar_power_off">exit</string>
</resources>