<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/main_content_margin_middle"
    android:layout_marginEnd="@dimen/main_content_margin_middle"
    android:background="@color/white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/item_card_radius"
    app:cardElevation="@dimen/item_card_elevation">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_item_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/btn_item_play"
                android:layout_width="@dimen/item_play_button_size"
                android:layout_height="@dimen/item_play_button_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/main_content_margin_small"
                app:srcCompat="@drawable/ic_list_play" />

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_item_play"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="@dimen/main_content_margin_small"
                android:layout_marginStart="@dimen/item_title_text_margin_start"
                android:text="@string/item_guide_title"
                android:textSize="@dimen/item_title_text_size"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_item_bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_content_margin_small"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_item_time"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/item_data_margin_start"
                android:text="@string/item_guide_time"
                style="@style/item_list_tv_common" />

            <TextView
                android:id="@+id/tv_item_channel"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/seekbar_item"
                android:layout_marginVertical="@dimen/main_content_margin_small"
                android:layout_marginStart="@dimen/item_data_margin_start"
                android:text="@string/item_guide_channel"
                android:textColor="@color/green_list_guide"
                style="@style/item_list_tv_common" />

            <TextView
                android:id="@+id/tv_item_rate"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_time"
                app:layout_constraintStart_toEndOf="@+id/tv_item_channel"
                app:layout_constraintBottom_toTopOf="@+id/seekbar_item"
                android:layout_marginVertical="@dimen/main_content_margin_small"
                android:layout_marginStart="@dimen/main_content_margin_middle"
                android:text="@string/item_guide_rate"
                android:textColor="@color/blue_play_guide"
                style="@style/item_list_tv_common" />

            <SeekBar
                android:id="@+id/seekbar_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_channel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/main_content_margin_small"
                android:progressDrawable="@drawable/bg_seekbar_list_background"
                android:thumb="@drawable/ic_seekbar_thumb"
                android:splitTrack="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>