<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.HomeFragment"
    tools:ignore="MissingConstraints,ContentDescription">

    <data>
        <variable
            name="vm"
            type="org.techtown.samplerecorder.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_recording"
            android:layout_width="@dimen/main_img_recording"
            android:layout_height="@dimen/main_img_recording"
            android:layout_marginTop="@dimen/main_img_recording_margin_top"
            app:srcCompat="@drawable/ic_main_state_recording"
            style="@style/fragment_main_img_common" />

        <ImageView
            android:id="@+id/img_playing"
            android:layout_width="@dimen/main_img_playing"
            android:layout_height="@dimen/main_img_playing"
            android:layout_marginTop="@dimen/main_img_playing_margin_top"
            app:srcCompat="@drawable/ic_main_state_playing"
            style="@style/fragment_main_img_common" />

        <com.visualizer.amplitude.AudioRecordView
            android:id="@+id/view_waveForm"
            android:layout_width="@dimen/main_waveform_width"
            android:layout_height="@dimen/main_waveform_height"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_recording"
            app:chunkAlignTo="center"
            app:chunkColor="@color/red_record"
            app:chunkMaxHeight="@dimen/main_waveform_chunk_max_height"
            app:chunkMinHeight="@dimen/main_waveform_chunk_min_height"
            app:chunkRoundedCorners="true"
            app:chunkSoftTransition="true"
            app:chunkSpace="@dimen/main_waveform_chunk_space"
            app:chunkWidth="@dimen/main_waveform_chunk_width"
            app:direction="leftToRight" />

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view_waveForm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/main_text_timer_text_size"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_main_record"
            android:layout_marginTop="@dimen/main_content_margin_big"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/main_layout_margin_horizontal"
            style="@style/fragment_main_container_common">

            <androidx.cardview.widget.CardView
                style="@style/fragment_main_cardView_common">

                <LinearLayout
                    android:id="@+id/container_record_settings"
                    style="@style/fragment_main_layout_common">

                    <TextView
                        android:text="@string/main_record_guide"
                        android:textColor="@color/red_record_guide"
                        style="@style/fragment_main_tv_common" />

                    <Button
                        android:id="@+id/btn_record_source"
                        android:text="@{@string/view_model_source(vm.source)}"
                        style="@style/fragment_main_btn_record_setting" />

                    <Button
                        android:id="@+id/btn_record_channel"
                        android:text="@{@string/view_model_record_channel(vm.recordChannel)}"
                        style="@style/fragment_main_btn_record_setting" />

                    <Button
                        android:id="@+id/btn_record_sampleRate"
                        android:text="@{@string/view_model_record_rate(vm.recordRate)}"
                        style="@style/fragment_main_btn_record_setting" />

                    <Button
                        android:id="@+id/btn_record_bufferSize"
                        android:text="@{@string/view_model_buffer_size(vm.bufferSize)}"
                        style="@style/fragment_main_btn_record_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/main_content_margin_tiny"
                        android:text="@string/main_switch_button_guide"
                        android:textColor="@color/red_record_guide"
                        android:textStyle="bold" />

                    <lib.kingja.switchbutton.SwitchMultiButton
                        android:id="@+id/switchButton"
                        android:layout_width="@dimen/main_button_width"
                        android:layout_height="@dimen/main_switch_button_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/main_content_margin_tiny"
                        android:layout_marginBottom="@dimen/main_content_margin_middle"
                        android:padding="@dimen/main_switch_button_padding"
                        app:selectedColor="@color/red_record_guide"
                        app:selectedTab="0"
                        app:strokeRadius="@dimen/main_switch_button_stroke_radius"
                        app:strokeWidth="@dimen/main_switch_button_stroke_width"
                        app:switchTabs="@array/switch_tabs"
                        app:textSize="@dimen/main_button_text_size" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/fragment_main_cardView_bottom_common">

                <Button
                    android:id="@+id/btn_record"
                    android:background="@drawable/bg_btn_record_active"
                    android:text="@string/record"
                    style="@style/fragment_main_layout_common" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_main_play"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/main_layout_margin_horizontal"
            style="@style/fragment_main_container_common">

            <androidx.cardview.widget.CardView
                style="@style/fragment_main_cardView_common">

                <LinearLayout
                    android:id="@+id/container_play_settings"
                    style="@style/fragment_main_layout_common">

                    <TextView
                        android:text="@string/main_play_guide"
                        android:textColor="@color/blue_play_guide"
                        style="@style/fragment_main_tv_common" />

                    <Button
                        android:id="@+id/btn_play_type"
                        android:text="@{@string/view_model_type(vm.type)}"
                        style="@style/fragment_main_btn_play_setting" />

                    <Button
                        android:id="@+id/btn_play_channel"
                        android:text="@{@string/view_model_play_channel(vm.playChannel)}"
                        style="@style/fragment_main_btn_play_setting" />

                    <Button
                        android:id="@+id/btn_play_sampleRate"
                        android:text="@{@string/view_model_play_rate(vm.playRate)}"
                        style="@style/fragment_main_btn_play_setting" />

                    <Button
                        android:id="@+id/btn_play_volume"
                        android:layout_marginBottom="@dimen/main_play_setting_margin_bottom"
                        android:text="@{@string/view_model_volume(vm.volume)}"
                        style="@style/fragment_main_btn_play_setting" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/fragment_main_cardView_bottom_common">

                <Button
                    android:id="@+id/btn_play"
                    android:background="@drawable/bg_btn_play_active"
                    android:text="@string/play"
                    style="@style/fragment_main_layout_common" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>